--- a/config/database.yml
+++ b/config/database.yml
@@ -1,37 +1,25 @@
-# PostgreSQL. Versions 9.3 and up are supported.
-#   gem install pg
-#
-#   Ensure the pg gem is defined in your Gemfile
-#   gem "pg"
-#
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
+  url: <%= ENV["DATABASE_URL"] %>
+
 
 development:
   <<: *default
   database: react_start_kit_development
-  username: <%= ENV.fetch("DATABASE_USERNAME", "") %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD", "") %>
-  host: <%= ENV.fetch("DATABASE_HOST", "localhost") %>
-  port: <%= ENV.fetch("DATABASE_PORT", "5432") %>
+  # If not using DATABASE_URL locally, uncomment the below and fill in:
+  # username: postgres
+  # password:
+  # host: localhost
+  # port: 5432
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+
 test:
   <<: *default
   database: react_start_kit_test
-  username: <%= ENV.fetch("DATABASE_USERNAME", "") %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD", "") %>
-  host: <%= ENV.fetch("DATABASE_HOST", "localhost") %>
-  port: <%= ENV.fetch("DATABASE_PORT", "5432") %>
+
 
 production:
   <<: *default
-  database: <%= ENV.fetch("DATABASE_NAME", "react_start_kit_production") %>
-  username: <%= ENV.fetch("DATABASE_USERNAME") %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD") %>
-  host: <%= ENV.fetch("DATABASE_HOST") %>
-  port: <%= ENV.fetch("DATABASE_PORT", "5432") %>
+  # On platforms like Heroku, DATABASE_URL is provided automatically.
